Lockscreen : fix no del key in pin-style
Issue : 0001179

Change-Id: I9e7bac35c68e03e2b88c1dfed6f6fb597af25825

--- a/core/res/res/layout/keyguard_screen_password_portrait.xml
+++ b/core/res/res/layout/keyguard_screen_password_portrait.xml
@@ -110,7 +110,8 @@
         android:layout_marginRight="16dip">
 
         <EditText android:id="@+id/passwordEntry"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/keyguard_lockscreen_pin_margin_left"
             android:singleLine="true"
