Add Lockscreen style : Orig (2/2)
Change-Id: Ia4db36129146c9ad4e3ed9f60d49c83326546c62

--- a/core/res/res/values/public.xml
+++ b/core/res/res/values/public.xml
@@ -1361,6 +1361,7 @@
   <java-symbol type="layout" name="keyguard_screen_tab_unlock_ring" />
   <java-symbol type="layout" name="keyguard_screen_tab_unlock_ring_shendu" />
   <java-symbol type="layout" name="keyguard_screen_tab_unlock" />
+  <java-symbol type="layout" name="keyguard_screen_tab_unlock_orig" />
   <java-symbol type="layout" name="keyguard_screen_tab_unlock_land" />
   <java-symbol type="layout" name="keyguard_screen_unlock_landscape" />
   <java-symbol type="layout" name="keyguard_screen_unlock_portrait" />
