Add Netspeedview, switch is STATUS_BAR_NET_SPD[1/2]
Show network speed on status bar, when the speed is zero for 10 seconds,
set this view invisible, otherwise this view will be visible. The key of
it's switch is STATUS_BAR_NET_SPD, will be set in Settings->Status Bar,
default to 1(show).

Change-Id: I23393bd98d59ca1f14497c28a33377ab87365796

--- a/packages/SystemUI/res/layout/status_bar.xml
+++ b/packages/SystemUI/res/layout/status_bar.xml
@@ -72,6 +72,12 @@
                 android:orientation="horizontal"/>  
         </LinearLayout>
 
+        <com.android.systemui.statusbar.policy.NetspeedView
+            android:textColor="@android:color/white"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            />
         <LinearLayout android:id="@+id/statusIcons"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
